# bouncing-ball

./: CMakeLists.txt
include/: base.h  constants.h  drawing.h
src/: base.cpp  drawing.cpp  main.cpp
